chore(react-grid): updates to copy and object ref

--- a/packages/sage-react/lib/Grid/GridRow.story.mdx
+++ b/packages/sage-react/lib/Grid/GridRow.story.mdx
@@ -52,7 +52,7 @@ export const AlignmentTypes = ({ types }) => {
 
 ### Horizontal Alignment
 
-The horizontal alignment default for each <code>.sage-row</code> aligns columns to the start (left) of the <code>.sage-row</code> container. Alignments will only be visible if the total amount of width taken up by columns is less than the total amount of space.
+The horizontal alignment default for each <code>.sage-row</code> aligns columns to the start (top) of the <code>.sage-row</code> container. Alignments will only be visible if the total amount of width taken up by columns is less than the total amount of space.
 
 Supported Types: <AlignmentTypes types={GridRow.HORIZONTAL_ALIGNMENT_TYPES}/>
 
