docs(button): react - add addon-docs for mdx capability

--- a/packages/sage-react/lib/Button/Button.story.mdx
+++ b/packages/sage-react/lib/Button/Button.story.mdx
@@ -1,15 +1,20 @@
-import { Meta } from "@storybook/addon-docs";
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
+import { Button } from './Button';
 
-<Meta title="Sage/Button/Notes" />
+<Meta title="Sage/Button" component={Button} />
 
-Sage Buttons allow a number of modifiers to customize their appearance including:
+## Subtitle (h2 equivalent)
 
-- Color -- use `color` prop; default is `primary`
-- Size -- use `size` prop; default is standard size (40px)
-- Alignment -- option to align to the right with `alignRight` set to `true`
-- Icons -- All Sage icons can be added either to the left or the right of the button label using `icon` and `iconPosition` (left is default). You can even make an icon-only button with `iconOnly` set to `true` in which case the label becomes visually hidden leaving just the icon visible while still screen reader accessible.
-- Loading -- Buttons can be set into a loading state by setting `loading` to `true`
+Standard button styling with multiple display options.
 
-Buttons can also be configured as hyperlinks while keeping the styling consistent. Just pass the desired properties (at least `href`) for external links or `to` for route-based links (must be within React Router components). Additional HTML attributes and `Link` props may also be passed as needed.
+### Another Subtitle (h3 equivalent)
 
-When two or more buttons need to be grouped together use `Button.Group` to wrap them. Use the `gap` prop to adjust the spacing as needed. The group can also be set to align to the right with `alignEnd={true}` if needed.
+Additional paragraph 1 goes here.
+
+Another paragraph here if needed.
+
+<Canvas>
+  <Story name="Primary">
+    <Button>Button</Button>
+  </Story>
+</Canvas>
