docs(button): react - minor alignment and remove redundant children prop

--- a/packages/sage-react/lib/Button/Button.story.mdx
+++ b/packages/sage-react/lib/Button/Button.story.mdx
@@ -171,8 +171,7 @@ Displays an animated spinner when `loading` is set to `true`. By default, `loadi
 
 <Canvas>
   <Story name="Loading state">
-    <Button loading={true}>Loading Button
-    </Button>
+    <Button loading={true}>Loading Button</Button>
   </Story>
 </Canvas>
 
@@ -181,8 +180,7 @@ Displays a button that takes up 100% of the width of its container.
 
 <Canvas>
   <Story name="Full Width">
-    <Button fullWidth={true}>Full Width Button
-    </Button>
+    <Button fullWidth={true}>Full Width Button</Button>
   </Story>
 </Canvas>
 
@@ -200,12 +198,10 @@ Used for the Rich Text Editor UI. The option for `selected={true}` is available 
         iconOnly={true}>Button</Button>
       <Button 
         color="secondary"
-        children="Text"
         className="sage-btn--rich-text"
         disclosure={true}>Text</Button>
       <Button 
         color="secondary"
-        children="Text"
         className="sage-btn--rich-text"
         icon="align-left"
         iconOnly={true}
