--- a/packages/sage-react/lib/Introduction.story.mdx
+++ b/packages/sage-react/lib/Introduction.story.mdx
@@ -1,7 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
+import { Introduction } from './Introduction';
 
 <Meta title="Introduction" />
 
-# Sage React Storybook
-
-Content coming soon!
+<Introduction />
