--- a/packages/sage-react/lib/Hero/Hero.story.mdx
+++ b/packages/sage-react/lib/Hero/Hero.story.mdx
@@ -1,5 +1,6 @@
 import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
 import { Hero } from '../Hero';
+import { Button } from '../Button';
 
 import heroContained from '../../public/HeroContainedPlaceholder.png';
 import heroFull from '../../public/HeroWorkshopPlaceholder.jpg';
@@ -26,18 +27,151 @@ import heroFull from '../../public/HeroWorkshopPlaceholder.jpg';
 
 <ArgsTable story="Default" />
 
-## Variants
+## Full-Bleed Images
 
-### Default
-Used with affirmative actions such as submitting, continuing, and saving.
+### Default - Small
+The default small Hero component takes up a portion of the viewport width.
 
 <Canvas>
-  <Story name="Default">
+  <Story name="Small">
     <Hero
       title="Learn with Kajabi in our live workshops"
       description="Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account."
+      heroSize="small"
+      image={{
+        src: `${heroFull}`,
+        alt: ''
+      }}
+      footerActions={<><Button color="primary">Learn more</Button></>}
+    />
+  </Story>
+</Canvas>
+
+### Default - Large
+The default large Hero component takes up the entire viewport width.
+
+<Canvas>
+  <Story name="Large">
+    <Hero
+      title="Learn with Kajabi in our live workshops"
+      description="Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account."
+      heroSize="large"
+      image={{
+        src: `${heroFull}`,
+        alt: ''
+      }}
+      footerActions={<><Button color="primary">Learn more</Button></>}
+    />
+  </Story>
+</Canvas>
+
+### Image has a trigger
+When the image has a trigger, the image is clickable and will trigger an action.
+
+<Canvas>
+  <Story name="Image with Trigger">
+    <Hero
+      title="Learn with Kajabi in our live workshops"
+      description="Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account."
+      heroSize="small"
       image={{
         src: `${heroFull}`
+      }}
+      ctaAttributes={{
+        href: '#'
+      }}
+      footerActions={<><Button color="primary">Learn more</Button></>}
+    />
+  </Story>
+</Canvas>
+
+### Borderless and custom background color
+When the Hero is set to borderless and has a custom background color, the Hero will have no border and the background color will be applied to the entire Hero.
+
+<Canvas>
+  <Story name="Borderless and custom background color">
+    <Hero
+      title="Learn with Kajabi in our live workshops"
+      description="Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account."
+      heroSize="small"
+      customBackgroundColor="#e6f4fe"
+      image={{
+        src: `${heroFull}`
+      }}
+      footerActions={<><Button color="primary">Learn more</Button></>}
+    />
+  </Story>
+</Canvas>
+
+## Contained Images
+
+### Default - Small
+
+<Canvas>
+  <Story name="Small - Contained">
+    <Hero
+      title="Learn with Kajabi in our live workshops"
+      description="Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account."
+      heroSize="small"
+      image={{
+        src: `${heroContained}`,
+        alt: ''
+      }}
+      footerActions={<><Button color="primary">Learn more</Button></>}
+    />
+  </Story>
+</Canvas>
+
+### Default - Large
+The default large Hero component takes up the entire viewport width.
+
+<Canvas>
+  <Story name="Large - Contained">
+    <Hero
+      title="Learn with Kajabi in our live workshops"
+      description="Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account."
+      heroSize="large"
+      image={{
+        src: `${heroContained}`,
+        alt: ''
+      }}
+      footerActions={<><Button color="primary">Learn more</Button></>}
+    />
+  </Story>
+</Canvas>
+
+### Image has a trigger
+When the image has a trigger, the image is clickable and will trigger an action.
+
+<Canvas>
+  <Story name="Image with Trigger - Contained">
+    <Hero
+      title="Learn with Kajabi in our live workshops"
+      description="Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account."
+      heroSize="small"
+      image={{
+        src: `${heroContained}`
+      }}
+      ctaAttributes={{
+        href: '#'
+      }}
+      footerActions={<><Button color="primary">Learn more</Button></>}
+    />
+  </Story>
+</Canvas>
+
+### Borderless and custom background color
+When the Hero is set to borderless and has a custom background color, the Hero will have no border and the background color will be applied to the entire Hero.
+
+<Canvas>
+  <Story name="Borderless and custom background color - Contained">
+    <Hero
+      title="Learn with Kajabi in our live workshops"
+      description="Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account."
+      heroSize="small"
+      customBackgroundColor="#e6f4fe"
+      image={{
+        src: `${heroContained}`
       }}
       footerActions={<><Button color="primary">Learn more</Button></>}
     />
