--- a/packages/sage-react/lib/Modal/Modal.story.mdx
+++ b/packages/sage-react/lib/Modal/Modal.story.mdx
@@ -1,6 +1,34 @@
-import { Meta } from "@storybook/addon-docs";
+import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
 
-<Meta title="Sage/Modal/Notes" />
+import { Button } from '../Button';
+import { ProgressBar } from '../ProgressBar';
+import { Icon } from '../Icon';
+import { SageTokens, SageClassnames } from '../configs';
+import { Modal } from './Modal';
+
+<Meta title="Sage/Modal" component={Modal} />
+
+# Modal
+
+## Properties
+<ArgsTable story="Default" />
+
+<Canvas>
+  <Story name="Default">
+    <Modal>
+      <Modal.Header>
+        <h2>Modal Title</h2>
+      </Modal.Header>
+      <Modal.Body>
+        <p>Modal Body</p>
+      </Modal.Body>
+      <Modal.Footer>
+        <button>Cancel</button>
+        <button>Save</button>
+      </Modal.Footer>
+    </Modal>
+  </Story>
+</Canvas>
 
 The Modal allows us to format a modal window according to Sage design specs and includes the following features:
 
