docs(hero): react - add borderless prop to the examples

--- a/packages/sage-react/lib/Hero/Hero.story.mdx
+++ b/packages/sage-react/lib/Hero/Hero.story.mdx
@@ -99,6 +99,7 @@ When the Hero is set to borderless and has a custom background color, the Hero w
       description="Did you know we offer free workshops? Kajabi experts host live workshops every week on topics from marketing your products to building out your Kajabi account."
       heroSize="small"
       customBackgroundColor="#e6f4fe"
+      borderless={true}
       image={{
         src: `${heroFull}`,
         alt: 'Multi layered illustration of UI elements and woman clasping her hands together in excitement'
@@ -178,6 +179,7 @@ Contained images within a Hero component will have margins that push the image a
       heroSize="small"
       customBackgroundColor="#e6f4fe"
       contained={true}
+      borderless={true}
       image={{
         src: `${heroContained}`,
         alt: 'Multi layered illustration of UI elements and woman smiling to the camera'
